2002-05-31  Joe Shaw  <joe@ximian.com>

	* acinclude.m4: Added.  Includes the pkg-config, glib1 and glib2
	macros so it can be disted on a machine without devel packages
	from both installed.

	* configure.in: Remove JP's commit, as it shouldn't be necessary
	anymore.

2002-05-27  JP Rosevear  <jpr@ximian.com>

	* configure.in: see if we can handle the case where glib2 is not
	installed and we are in maintainer mode

2002-05-24  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-server.c (read_headers_cb): According to RFC
	2616, section 5.2, an absolute URI passed in during a request gets
	priority over the Host header.

2002-05-23  Joe Shaw  <joe@ximian.com>

	* acconfig.h: undef SOUP_GLIB2

	* configure.in: Check for glib 1.2 or 2.0 depending on whether the
	--enable-glib2 configure flag was passed in.

	* soup.pc.in: Get the requirements for pkgconfig from a variable
	in configure.in.

	* src/soup-ssl-proxy/soup-openssl.c: Port (conditionally) to glib 2.

2002-05-23  Dan Winship  <danw@ximian.com>

	* src/libsoup/Makefile.am (libsoupinclude_HEADERS): install
	soup-ntlm.h

	* src/libsoup/soup-ntlm.c (soup_ntlm_parse_challenge): Separated
	out of soup_ntlm_response. Takes the challenge and returns the
	nonce and default domain from it. (The application can use this
	from a 401 handler to find the domain name when using NTLM auth.)
	(soup_ntlm_response): Remove the challenge-parsing code from here.
	Just take the nonce instead.

	* src/libsoup/soup-auth.c (ntlm_init): Update for soup-ntlm
	changes. Don't parse the authmech twice since there's no reason
	to.

2002-05-06  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-headers.c (soup_headers_parse_request):
	sizeof() on a static string includes the terminating nul, whereas
	the length being passed in from the GString doesn't, so subtract
	one from the sizeof().  Fixes a problem on the server when a valid
	request was made, but there weren't any headers.

	* src/libsoup/soup-server.c (issue_bad_request): Set a 400 Bad